
cc_library(
	name = "wave",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = glob([
		"src/**/*.cpp",
		"src/**/*.hpp",
		"src/**/*.c",
		"src/**/*.h",
	]),
	defines = [
		"BOOST_ALL_NO_LIB=1"
	],
	deps = [
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_concept_check//:concept_check",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_spirit//:spirit",
		"@com_github_bazelboost_filesystem//:filesystem",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_detail//:detail",
		"@com_github_bazelboost_preprocessor//:preprocessor"
	],
)
